@@ -40,13 +40,13 @@
 <HR>
 <H2><A NAME="2">Configuring, Building, Installing</A></H2>
       <UL>
-        <A HREF="configopts.html">Configuring the library</A><BR>
-        <A HREF="install.html">Install the library</A><BR>
+        <A HREF="configopts.html">Configure options</A><BR>
+        <A HREF="install.html">Getting started: configure, build, install</A><BR>
         <A HREF="gccrebuild.html">Rebuilding libgcc for ABI-breaking flags</A><BR>
       </UL>
 
 <HR>
-<H2><A NAME="3">Chapter-Specific Information, Extensions, and Advice</A></H2>
+<H2><A NAME="3">Chapter-Specific Information, Extensions, Notes and Advice</A></H2>
       <OL>
          <LI><A HREF="17_intro/howto.html">Chapter 17 (Intro)</A>
          <LI><A HREF="18_support/howto.html">Chapter 18 (Library Support)</A>
